ZFIN-9021:
Add new columns to the metrics reports for publication location.
Add lombok.
Add text blocks.
Refactor and introduce a view that provides all the joined tables necessary for the relevant metrics reports.
Add a test to confirm that the new results match the old results exactly.